# stratAIgic

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
code/: index.html
config/: config_details.toml
notebooks/: Main.ipynb
src/: generate_marketing_mix.py  generate_persona.py  llm.py  main.py  mmx_dict_to_dataframe.py  streamlit3.py
src/blueprints/: process_business_info_input.json
src/llm/: functions.py
src/prompts/: Prompts StratAIgic.txt  example_founderpal_api_request.json  marketing_mix_prompt.txt  system_prompt.txt
src/sample_ins_and_outs/: sample_mmx_input.json  sample_mmx_output.json  sample_persona_input.json  sample_persona_output.json
tests/unit_tests/: tests.py
